Den Anfang von 1.1.1 „normierte Vektorräume“ überarbeitet
git-svn-id: https://svn.lug-jena.de/uni-skripte@1286 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -323,52 +323,61 @@
 % Topologische Räume $\supset$ Metr. Räume $\supset$ Vektorräume
 % $\supset$ Banachräume $\supset$ Hilberträume
 
-\textbf{Grunddefinitionen}
+Als Grundlage für den kommenden Stoff sollen hier einige grundlegende
+Definitionen gegeben werden, die bereits aus anderen Vorlesungen als bekannt
+vorausgesetzt werden.
+
+Für einen \highl{Vektorraum}~$E$ über einem \highl{Körper}~$\K$ --~wobei für
+$\K=\R$ der Vektorraum reeller Vektorraum und für $\K=\C$ der Vektorraum
+komplexer Vektorraum genannt wird~-- gelten folgende Definitionen:
 \begin{itemize}
- \item
-  $E$ \highl{Vektorraum} über einem \highl{Körper} $\K$ mit $\K=\R$ oder $\C$
-  (reeller/komplexer Vektorraum)
- \item
-  $\{x_{1},\ldots,x_{n}\}\subset E$ \highl[linear!unabhängig]{linear
-  unabhängig} $:\Longleftrightarrow$
-  $\lambda_{1}x_{1}+\ldots+\lambda_{n}x_{n}=0 \Rightarrow
-  \lambda_{1}=\ldots=\lambda_{n}=0$; sonst \highl[linear!abhängig]{linear
-  abhängig}
- \item
-  $M\subset E$ linear unabhängig $:\Longleftrightarrow$ jede endliche Teilmenge ist linear
-  unabhängig
- \item
-  $\dim E=n$ $:\Longleftrightarrow$ $\exists n$ linear unabhängige Elemente aus
-  $E$ und $n+1$ Elemente sind linear abhängig
+ \item Eine Menge von Vektoren $\{x_{1},\dotsc,x_{n}\}\subset E$ heißt
+  \gdwdef{\highl[linear!unabhängig]{linear unabhängig}} für
+  $\lambda_{1},\dotsc,\lambda_{n}\in\K$ gilt:
+  $\lambda_{1}x_{1}+\dotsb+\lambda_{n}x_{n}=0 \impliziert
+  \lambda_{1}=\dotsb=\lambda_{n}=0$.
+  Sonst heißt die Menge \highl[linear!abhängig]{linear abhängig}.
 
-  z.\,B. $\K^{n}$ (s. linare Algebra)
- \item
-  $\dim E =\infty$ $:\Longleftrightarrow$ $\forall n\in \N\ \exists$ linear unabhängig
-  Elemente $\{x_{1},\ldots,x_{n}\}$
+ \item Eine unendliche Menge~$M\subset E$ heißt linear unabhängig \gdwdef{}
+  jede endliche Teilmenge von~$M$ linear unabhängig ist.
 
-  z.\,B. $C([a,b]) := \{ f \big| f\colon [a,b] \rightarrow \K, \text{stetig} \},\;
-    \{1,x,x^{2},\ldots,x^{n}\}$ linear unabhängig
- \item
-  $M\subset E$. Als Spann (engl.~span) von $M$ bezeichnet man den Teilraum
-  von $E$, der durch die Vektoren $x_{1},\ldots,x_{n}$ aufgespannt wird.
+ \item Der Vektorraum~$E$ hat die Dimension~$\dim E=n$ \gdwdef{} es $n$ linear
+  unabhängige Elemente aus $E$ gibt und eine Teilmenge mit $n+1$ Elementen
+  linear abhängig ist. Der Vektorraum~$\K^{n}$ hat z.\,B. die Dimension~$n$;
+  s.~linare Algebra.
 
-  $\Span M := \{x\in E\colon x = \sum_{\text{endl.}} \lambda_{j}x_{j},
-  \lambda_{j}\in \K, x_{j}\in M\}$
+ \item Ein Vektorraum hat die Dimension~$\dim E =\infty$ \gdwdef{} für alle
+  natürlichen Zahlen~$n$ eine linear unabhängige Teilmenge
+  $\{x_{1},\dotsc,x_{n}\}\subset E$ mit $n$~Elementen existiert.
 
-  Der Spann ist der Durchschnitt aller Teilräume, die $M$ enhalten oder
-  anders ausgedrückt, es ist der kleinste Teilraum von $E$, der $M$ enthält.
- \item
-  Sei $\dim E = n$. Dann heißen $\{x_{1},\ldots,x_{n}\}$ \highl{Basis}
-  $:\Longleftrightarrow$
+  Beispielsweise ist die Dimension des \highl{Raums der stetigen
+  Funktionen}~$C([a,b]) := \{ f \big| f\colon [a,b] \rightarrow \K
+  \text{~und stetig} \}$ unendlich, da die Teilmenge
+  $\{1,x,x^{2},\dotsc,x^{n}\}$ linear unabhängig ist.
+
+ \item Als den \highl{Spann} (engl.~span) oder die \highl{lineare Hülle} der
+  Menge~$M\subset E$ bezeichnet man den Teilraum von~$E$, der durch die
+  Vektoren $x_{1},\dotsc,x_{n}$ aus $M$ aufgespannt wird.
+  \begin{gather*}
+    \Span M := \{x\in E\colon x = \sum_{j=1}^{n} \lambda_{j}x_{j},
+       \lambda_{j}\in \K, x_{j}\in M\}
+  \end{gather*}
+
+  Der Spann ist der Durchschnitt aller Teilräume von~$E$, die die Menge~$M$
+  enthalten, oder anders ausgedrückt, es ist der kleinste Teilraum von $E$,
+  der $M$ enthält.
+
+ \item Für einen Vektorraum der Dimension $\dim E = n$ bezeichnet man die
+  Menge $\{x_{1},\dotsc,x_{n}\}$ als \highl{Basis} oder auch
+  \highl{Hamelbasis} von~$E$ \gdwdef{}
   \begin{enumerate}
-   \item $x_{1},\ldots,x_{n}$ sind linear unabhängig
-   \item $\Span\{x_{1},\ldots,x_{n}\} = E$
+   \item die Vektoren $x_{1},\dotsc,x_{n}$ sind linear unabhängig und
+   \item $\Span\{x_{1},\dotsc,x_{n}\} = E$
   \end{enumerate}
 
-  \textbf{Bemerkung}\\ % Das soll so sein; die Bemerkung hatte keine Nummer
   Jeder Vektorraum besitzt eine \highl{Hamelbasis}, d.\,h. es existiert
-  eine linear unabhängige Menge von Vektoren, die $E$ aufspannt: $\Span M
-  = E$ (o.~Bew.)
+  eine linear unabhängige Menge~$M$ von Vektoren, die $E$ aufspannt: $\Span M
+  = E$. (o.~Bew.)
 \end{itemize}
 
 
