--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -570,41 +570,50 @@ komplexer Vektorraum genannt wird~-- gelten folgende Definitionen:
 \end{bsp}
 
 \begin{satz}\label{satz:1.1.1/1}
-  $(E, \norm{\cdot})$ normierter Vektorraum.
-
-  Dann gilt: $E$ vollständig $\Longleftrightarrow$ $\forall (x_{n})_{n}$ mit
-  $\sum\norm{x_{n}}<\infty$ $\Rightarrow$ $\exists x\in E$ mit $x=\sum
-  x_{n}$. (jede absolutkonvergente Reihe (bzgl. $\norm{\cdot}$) ist konvergent)
+  Für einen normierten Vektorraum $(E, \norm{\cdot})$ gilt: $E$ ist
+  \gdw{vollständig und damit ein Banachraum} jede absolutkonvergente Reihe
+  (bzgl. der Norm $\norm{\cdot}$) auch in $E$ konvergent ist; $\forall
+  (x_{n})_{n} \text{~mit~} \sum\norm{x_{n}}<\infty \impliziert \exists \sum
+  x_{n}\in E$.
 
   \begin{proof}
     1.~Übungsserie Aufgabe 3
+    \begin{description}
+     \item["`$\Rightarrow$"'] folgt leicht aus der Definition von vollständig
+
+     \item["`$\Leftarrow$"'] \todo{Beweis führen}
+    \end{description}
   \end{proof}
 \end{satz}
 
 % 15.10.04
 
 \begin{satz}\label{satz:1.1.1/2}
-  $A\ne \emptyset, B(A) := \{ f\colon A\rightarrow \K\colon \norm{f}_{\infty} :=
-  \sup_{x\in A}\abs{f(x)}<\infty \}$
-
-  Dann ist $B$ ist Banachraum bzgl. $\norm{\cdot}$.
+  Für eine nichtleere Menge~$A$ sei $B(A)$ wie folgt definiert. $B(A)$ ist
+  ein Banachraum bzgl. der Supremumsnorm $\norm{\cdot}_{\infty}$.
+  \begin{gather*}
+    B(A) := \{ f\big| f\colon A\rightarrow \K,
+       \norm{f}_{\infty} = \sup_{x\in A}\abs{f(x)}<\infty \}
+  \end{gather*}
 
   \begin{proof}
-    Verwenden \autoref{satz:1.1.1/1}. Es sei $(f_{n})_{n}\subset B(A)$ mit
-    $\sum_{n=1}^{\infty} \norm{f_{n}}_{\infty} < \infty$. Weiterhin sei
-    $x\in A$.
-    \begin{flalign*}
-      \Longrightarrow&\abs[\Bigl]{\sum_{k=m}^{n} f_{k}(x)} \leq
-         \sum_{k=m}^{n}\norm{f_{k}}_{\infty}\leq
-         \epsilon\quad\text{ für }m,n \geq n_{0}(\epsilon)&\\
-      \Longrightarrow& \Bigl(\sum_{k=1}^{n}f_{k}(x)\Bigr)_{n}
-         \text{ ist C.\,F. in }\K \text{ und da $\K$ vollständig ist }
-         \Longrightarrow \exists f(x) = \sum_{k=0}^{\infty} f_{k}(x)&\\
-      \Longrightarrow& f\colon A\rightarrow\K \text{ Es gilt: } \abs{f(x)}\leq
-         \sum_{k=0}^{\infty}\norm{f_{k}(x)}_{\infty}<\infty&\forall x
-    \end{flalign*}
-    Somit ist auch $f\in B(A)$, weshalb $B(A)$ vollständig und damit ein
-    Banachraum ist.
+    Es sei $(f_{n})_{n}\subset B(A)$ eine absolutkonvergente Folge von
+    Funktionen; $\sum \norm{f_{n}}_{\infty} < \infty$. Wenn wir für diese
+    nachweisen können, dass sie konvergent in $B(A)$ ist, dann ist nach
+    \autoref{satz:1.1.1/1} gezeigt, dass $B(A)$ ein Banachraum ist. Außerdem
+    sei $x\in A$.
+
+    Mit Hilfe der Dreiecksungleichung ergibt sich für $m,n\geq n_{0}(\epsilon)$:
+    \begin{gather*}
+      \abs[\Big]{\sum_{k=m}^{n} f_{k}(x)}
+         \leq \sum_{k=m}^{n}\norm{f_{k}}_{\infty}
+         \leq \epsilon
+    \end{gather*}
+
+    Also ist die Folge $\bigl(\sum_{1}^{n}f_{k}(x)\bigr)_{n}$ eine
+    Cauchyfolge in $\K$ und da $\K$ vollständig ist, konvergiert sie und
+    es existiert $f(x) = \sum_{1}^{\infty}f_{k}(x)$. Da $\norm{f}\leq
+    \sum\norm{f_{k}(x)} <\infty$, ist $f\in B(A)$.
   \end{proof}
 \end{satz}
 
