Definition und Bemerkung zu dichter TR und separabel
git-svn-id: https://svn.lug-jena.de/uni-skripte@1295 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -699,28 +699,42 @@ komplexer Vektorraum genannt wird~-- gelten folgende Definitionen:
   \end{proof}
 \end{bsp}
 
-\begin{defini}\label{def:1.1.1/4}
+\begin{defini}\label{def:dicht-separabel}
   Für einen normierten Vektorraum $(E, \norm{\cdot})$ (oder allgemein einen
   metrischen Raum) gilt:
   \begin{enumerate}
-   \item\label{en1} der Teilraum $M\subset E$ heißt \gdwdef{\highl{dicht} in $E$}
-    es zu jedem $x\in E$ eine Folge $(x_{j})_{j}\subset M$ gibt,
-    deren Grenzwert in $E$ liegt: $x_{j} \rightarrow x \in E$.
-   \item $E$ heißt \gdwdef{\highl{separabel}} es eine
-    abzählbare und dichte Teilmenge in $E$ gibt.
+   \item Die Teilmenge $M\subset E$ heißt \gdwdef{\highl{dicht} in $E$}
+    es zu jedem $x\in E$ eine konvergente Folge $(x_{j})_{j}\subset M$ gibt,
+    deren Grenzwert in $E$ liegt; $x_{j} \rightarrow x \in E$.
+    \help{Müsste man nicht fordern, dass $M\ne E$, da sonst jede abzählbare
+      Menge separabel wäre, da $E$ dicht in $E$ liegt?}
+   \item Die Menge $E$ heißt \gdwdef{\highl{separabel}} es eine abzählbare und
+    dichte Teilmenge in $E$ gibt.
   \end{enumerate}
 \end{defini}
 
 \begin{bemerk}
   \begin{enumerate}
-   \item $\Q\subset\R$ dicht $\Longrightarrow$ $\R$ separabel
-   \item $\Q^{n}\subset\R^{n}$ dicht $\Longrightarrow$ $\R^{n}$ separabel
-   \item äquivalent zum \autoref{en1} in \autoref{def:1.1.1/4} ist:
-    \begin{gather*}
-      \forall \epsilon>0\:\forall x\in E\:\exists x_{\epsilon} \in M\colon
-      \norm{x-x_{\epsilon}}<\epsilon \Longleftrightarrow x_{\epsilon}\in
-         K_{\epsilon}(x), x\in M
-    \end{gather*}
+   \item Die Menge der rationalen Zahlen $\Q\subset\R$ liegt dicht in der
+    Menge der reellen Zahlen~$\R$, die daher separabel ist.
+
+   \item Das gleiche gilt für mehrdimensionale Räume über diesen Mengen:
+    $\Q^{n}\subset\R^{n}$ dicht $\impliziert$ $\R^{n}$ separabel.
+
+   \item Eine zur Definition der dichten Teilmenge
+    (\autoref{def:dicht-separabel}) äquivalente Aussage sind die folgenden:
+    \begin{itemize}
+     \item Jeder Punkt der Menge~$E$ lässt sich durch einen Punkt der
+      Menge~$M\subset E$ beliebig gut approximieren.
+
+     \item Für jedes $\epsilon>0$ findet man zu jedem Element~$x\in E$ ein
+      Element~$x_{\epsilon}\in M$, dass innerhalb der
+      \highl{$\epsilon$-Kugel} von $x$ liegt.
+      \begin{gather*}
+        \forall \epsilon>0\:\forall x\in E\:\exists x_{\epsilon} \in M\colon
+           \norm{x-x_{\epsilon}}<\epsilon
+      \end{gather*}
+    \end{itemize}
   \end{enumerate}
 \end{bemerk}
 
