Beispiele zu dichter TR und separabel
git-svn-id: https://svn.lug-jena.de/uni-skripte@1296 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -738,16 +738,57 @@ komplexer Vektorraum genannt wird~-- gelten folgende Definitionen:
   \end{enumerate}
 \end{bemerk}
 
-\begin{bsp}\label{bsp:1.1.1/5}
-  $l_{1}(\N)$ ist separabel. ($l_{\infty}(\N)$ ist nicht separabel. siehe Übungsaufgabe)
+\begin{bsp}\label{bsp:l1-separabel}
+  Der Raum der absolutkonvergenten Reihen~$l_{1}(\N)$ ist separabel.
 
   \begin{proof}
-    Da die Menge $C_{00}(\N):= \{ a\colon \exists n\in \N \ \forall k>n \colon
-    a_{k}=0\}$ dicht im $l_{1}(\N)$ liegt \help{wieso?}, lässt sich jedes
-    $a = (a_{1},\ldots,a_{n},0,\ldots,0)\in C_{00}(\N)$ durch Folgen aus
-    $C_{00}(\N)$ mit rationalen Gliedern approximieren. Die Menge
-    $M_{rat} = \{a\colon a\in C_{00}, a_{i}\in\Q\}$ ist eine abzählbare und
-    dichte Teilmenge in $l_{1}$, woraus die Behauptung folgt.
+    Die Menge \highl{$c_{00}$}$(\N)$ ist die Menge aller Folgen, deren Glieder
+    ab einem bestimmten Index Null sind.
+    \begin{gather*}
+      c_{00}(\N) := \{ (a_{n})_{n\in\N}\subset\K\colon
+         \exists j\in \N~\forall k>j \colon a_{k}=0\}
+    \end{gather*}
+
+    Die Anzahl der von Null verschiedenen Glieder in einer Folge aus $c_{00}$
+    ist endlich. Daher ist die Summe der Glieder der Folge endlich und deshalb
+    sind alle Folgen aus $c_{00}$ absolutkonvergente Reihen; $c_{00}\subset
+    l_{1}$.
+
+    Da für hinreichend große Indizes~$j\geq j_{0}(\epsilon)$ die Glieder einer
+    Folge~$(a_{n})_{n}\in l_{1}$ beliebig klein werden können, kann man die
+    Folge~$(a_{n})_{n}$ durch eine Folge~$(b_{n})_{n}\in c_{00}$
+    approximieren.
+    \begin{gather*}
+      b_{j} =
+         \begin{cases}
+           a_{j}&\colon j < j_{0}(\epsilon)\\
+           0&\colon j \geq j_{0}(\epsilon)
+         \end{cases}
+    \end{gather*}
+    \help{Sind wir hier nach der alternativen Definition aus der Bemerkung
+      nicht bereits fertig? Wenn ja, dann Beispiel 1.1.2/1 anpassen.}
+
+    Für jedes Glied~$b_{j}$ gibt es eine Folge mit rationalen Gliedern, die
+    gegen $b_{j}$ konvergiert. Man kann also eine Folge von Folgen mit
+    rationalen Gliedern ($(c_{n})_{n}\subset M_{rat} = \{a\colon a\in c_{00},
+    a_{i}\in\Q\}$) konstruieren, die gegen $(b_{n})_{n}$ und damit auch gegen
+    $(a_{n})_{n}$ konvergiert.
+
+    \help{Warum konstruieren wir nicht einfach eine Folge in $c_{00}$, für die
+      $b^{k}_{j} = \begin{cases}a_{n}&\colon k\leq j\wedge j<j_{0}\\0\end{cases}$}
+  \end{proof}
+\end{bsp}
+
+\help{Gilt $c_{00}\subsetneq l_{1}\subset c_{0}\subsetneq l_{\infty}$? Gibt es
+  sowas wie "`$A\subset B\subset C\wedge A,C\text{~separabel~}\impliziert
+  B\text{~separabel}$"' oder "`$A\subset B\wedge
+  B\text{~separabel~}\impliziert A\text{~separabel}$"'?}
+
+\begin{bsp}
+  Die Menge der beschränkten Folgen~$l_{\infty}(\N)$ ist nicht separabel.
+
+  \begin{proof}
+    \todo{aus der Übungsaufgabe übertragen}
   \end{proof}
 \end{bsp}
 
@@ -818,7 +859,7 @@ komplexer Vektorraum genannt wird~-- gelten folgende Definitionen:
       \begin{description}
        \item["`$\Rightarrow$"'] $(a^{n})_{n}\subset C_{00}(\N),
         a^{n}\rightarrow a\in l_{\infty}(\N)$ $\Rightarrow$ $a\in
-        C_{0}(\N)$ wie in \autoref{bsp:1.1.1/5}
+        C_{0}(\N)$ wie in \autoref{bsp:l1-separabel}
        \item["`$\Leftarrow$"'] $a\in C_{0}(\N) \Rightarrow
         \lim_{j\rightarrow\infty} a_{j}=0$
 
@@ -1542,7 +1583,7 @@ x\in U \exists r>0\colon K_{r}(x)\subset U$
     Vollständigkeit folgt aus \autoref{satz:1.1.1/2} für $p=\infty$ und analog zu
     Beispiel 1.1.1/4 für $1\leq p <\infty$
 
-    $l_{p} (1\leq p < \infty)$ separabel wie in \autoref{bsp:1.1.1/5}
+    $l_{p} (1\leq p < \infty)$ separabel wie in \autoref{bsp:l1-separabel}
 
     $l_{\infty}$ nicht separabel Übung Aufgabe 2, Serie 2
 
