Beispiel über abgeschlossene Teilräume bearbeitet
git-svn-id: https://svn.lug-jena.de/uni-skripte@1298 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -822,61 +822,85 @@ ein Teil"-raum und abgeschlossen ist.
   \end{enumerate}
 \end{bemerk}
 
-\begin{bsp}\label{bsp:1.1.2/1}
+\begin{bsp}\label{bsp:abgeschl-TR}
   \begin{enumerate}
-   \item Jede Ebene im $\R^{n}$ ist ein abgeschlossener Teilraum, insbesondere
-    sind
+   \item Jede Ebene im $\R^{n}$ ist ein abgeschlossener Teilraum. Insbesondere
+    ist
     \begin{itemize}
-     \item $U=\{ x\in\R^{n}\colon x_{n}=0\}$ abgeschlossener Teilraum des
+     \item $U=\{ x\in\R^{n}\colon x_{n}=0\}$ ein abgeschlossener Teilraum des
       $\R^{n}$,
+
      \item $U = \{x\in\R^{2}\colon ax_{1}+bx_{2}=0\}$ mit $(a,b)\ne0$ ein
       abgeschlossener Teilraum des $\R^{2}$ und
+
      \item $U=\{x\in\R^{3}\colon a_{1}x_{1}+ a_{2}x_{2}+a_{3}x_{3} =0\}$
       mit $(a_{1},a_{2},a_{3})\ne0$ ein abgeschlossener Teilraum des $\R^{3}$.
     \end{itemize}
 
-   \item Der Raum \highl[$C_{0}$]{$C_{0}(\N)$} der Nullfolgen mit endlichen
+   \item Der Raum \highl[$c_{0}$]{$c_{0}(\N)$} der Nullfolgen mit endlichen
     Gliedern ist ein abgeschlossener Teilraum des $l_{\infty}(\N)$.
-    Insbesondere ist $C_{0}(\R)$ Banachraum bzgl. der Unendlichnorm
-    $\norm{\cdot}_{\infty}$.
+    Insbesondere ist $c_{0}(\R)$ ein Banachraum bzgl. der
+    Unendlichnorm~$\norm{\cdot}_{\infty}$.
     \begin{gather*}
-      C_{0}(\N) := \{ (a_{j})_{j}\in l_{\infty}(\N)\colon
+      c_{0}(\N) := \{ (a_{j})_{j}\in l_{\infty}(\N)\colon
          \lim_{j\rightarrow\infty} a_{j} = 0\} \subset l_{\infty}(\N)
     \end{gather*}
 
     \begin{proof}
-      Es sei $(a^{n})_{n}$ eine Folge im $C_{0}(\N)$ mit dem Grenzwert $a\in
-      l_{\infty}(\N)$. Da für jedes $\epsilon>0$ und hinreichend großes $j$
-      ($j\geq j_{0}(\epsilon)$) sich $a_{j}\in a$ auf folgende Weise
-      abschätzen lässt, ist $a$ eine Nullfolge, also in $C_{0}(\N)$, und
-      $C_{0}(\N)$ daher abgeschlossen.
+      Es sei $(a^{n})_{n}\subset c_{0}(\N)$ eine Folge von Nullfolgen mit dem
+      Grenzwert $a\in l_{\infty}(\N)$. Da für jedes $\epsilon>0$ die Glieder
+      der Grenzwertfolge~$a=(a_{j})_{j}$ mit hinreichend großem Index~$j$
+      ($j\geq j_{0}(\epsilon)$) auf folgende Weise abgeschätzt werden können,
+      ist $a$ eine Nullfolge, also ein Element von $c_{0}(\N)$, und
+      $c_{0}(\N)$ daher abgeschlossen und ein Banachraum.
       \begin{gather*}
         \abs{a_{j}}\leq \abs{a_{j}-a_{j}^{n}} + \abs{a_{j}^{n}}
-           \leq \underbrace{\norm{a-a^{n}}_{\infty}}_{\leq \epsilon, n \geq
-           n_{0}(\epsilon)} + \abs{a_{j}^{n}} \leq 2\epsilon
+           \leq \underbrace{\norm{a-a^{n}}_{\infty}}_{\leq \epsilon,~n \geq
+           n_{0}(\epsilon)} + \abs{a_{j}^{n}}
+           \leq 2\epsilon
       \end{gather*}
     \end{proof}
-   \item $C_{00}(\N)$ liegt dicht in $C_{0}(\N)$. Somit ist $C_{0}(\N)$
-    separabel und $\overline{C_{00}(\N)} = C_{0}(\N)\subsetneq
-    l_{\infty}(\N)$.
+
+   \item Die Menge~$c_{00}(\N)$ der Folgen, die ab einem bestimmten Glied Null
+    sind, liegt dicht in der Menge~$c_{0}(\N)$ der Nullfolgen. Somit ist
+    $c_{0}(\N)$ separabel und außerdem gilt $\overline{c_{00}(\N)} =
+    c_{0}(\N)\subsetneq l_{\infty}(\N)$.
 
     \begin{proof}
-      \begin{description}
-       \item["`$\Rightarrow$"'] $(a^{n})_{n}\subset C_{00}(\N),
-        a^{n}\rightarrow a\in l_{\infty}(\N)$ $\Rightarrow$ $a\in
-        C_{0}(\N)$ wie in \autoref{bsp:l1-separabel}
-       \item["`$\Leftarrow$"'] $a\in C_{0}(\N) \Rightarrow
-        \lim_{j\rightarrow\infty} a_{j}=0$
+      Um zu zeigen, dass $c_{00}$ eine dichte Teilmenge von $c_{0}$ ist, kann
+      man wie im Beweis von \autoref{bsp:l1-separabel} vorgehen: Jede
+      Folge~$(a_{n})_{n}\in c_{0}$ lässt sich durch eine Folge~$(b_{n})_{n}\in
+      c_{00}$ approximieren. Für $(b_{n})_{n}$ gibt es eine Folge von Folgen
+      aus $c_{00}$ mit rationalen Gliedern, die gegen $(b_{n})_{n}$
+      konvergiert.
 
-        $ \epsilon > 0 \Rightarrow
-        \exists j_{0}(\epsilon) \forall j\geq j_{0}(\epsilon):
-        \abs{a_{j}}\leq \epsilon$
+      % Eine beliebige, konvergente Folge $(a^{j})_{j}\subset c_{00}(\N)$ habe
+      % den Grenzwert~$(a_{n})_{n}$. Wie im Beweis von \autoref{bsp:1.1.1/4}
+      % lässt sich mit $\norm{\cdot}_{\infty}$ statt $\norm{\cdot}_{1}$ zeigen,
+      % dass für $j\geq j_{0}(\epsilon)$
+      % \begin{gather*}
+      %   \sup_{n} \abs{a^{j}_{n}-a_{n}} \leq \epsilon
+      % \end{gather*}
+      % Damit lässt sich dann durch folgende Abschätzung zeigen, dass $a$ eine
+      % Nullfolge ist.
+      % \begin{gather*}
+      %   \lim_{n\rightarrow\infty} \abs{a_{n}} \leq \lim_{n\rightarrow\infty}
+      %      \abs{a_{n}-a_{n}^{j}} + \lim_{n\rightarrow\infty} \abs{a_{n}^{j}}
+      %      \leq 2\epsilon
+      % \end{gather*}
 
-        $j \geq j_{0}(\epsilon) \Rightarrow \norm{a-a^{j}}_{\infty}=
-        \sup_{k>j}\abs{a_{j}} \leq \epsilon$ wobei
-        $a^{j}=(a_{1},\ldots,a_{j},0,\ldots)\in C_{00}(\N)$
-
-      \end{description}
+      Nun der Beweis, dass $c_{0}$ für alle Folgen in $c_{00}$ den Grenzwert
+      enthält: Es sei $a$ der Grenzwert einer beliebigen Folge~$(a^{n})_{n}$
+      von Folgen in $c_{00}$. Also gilt für für hinreichend große Indizes
+      $j\geq j_{0}(\epsilon)$: $\norm{a-a^{j}}_{\infty}\leq\epsilon$. Da die
+      Folgen~$a^{j}$ aus $c_{00}$ sind, gibt es einen Index~$k_{0}$ für den
+      alle Glieder aller Folgen mit größerem Index Null sind;
+      $k_{0} = \max_{j\geq j_{0}} \{ k\colon b_{j}^{k} \ne0\}$. Damit folgt
+      für $j\geq j_{0}(\epsilon)$ und mit der folgenden Abschätzung, dass
+      $a$ eine Nullfolge, also ein Element von $c_{0}$ ist:
+      \begin{gather*}
+        \norm{a-a^{j}}_{\infty} = \sup_{k>k_{0}}\abs{a_{k}}\leq\epsilon
+      \end{gather*}
     \end{proof}
   \end{enumerate}
 \end{bsp}
@@ -1592,7 +1616,7 @@ x\in U \exists r>0\colon K_{r}(x)\subset U$
 
     $l_{\infty}$ nicht separabel Übung Aufgabe 2, Serie 2
 
-    Aussage für $C_{0}$ siehe \autoref{bsp:1.1.2/1}
+    Aussage für $C_{0}$ siehe \autoref{bsp:abgeschl-TR}
 
     Aussage für $c$: $\{ \alpha = (\alpha_{k})_{k}\colon \alpha_{k}\in \Q,
     \alpha = (\alpha_{1},\alpha_{2},\ldots,\alpha_{n},\alpha_{0},
