Label für Bemerkung zur Definition von dicht
git-svn-id: https://svn.lug-jena.de/uni-skripte@1303 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -713,7 +713,7 @@ komplexer Vektorraum genannt wird~-- gelten folgende Definitionen:
   \end{enumerate}
 \end{defini}
 
-\begin{bemerk}
+\begin{bemerk}\label{bem:alternative-dicht-def}
   \begin{enumerate}
    \item Die Menge der rationalen Zahlen $\Q\subset\R$ liegt dicht in der
     Menge der reellen Zahlen~$\R$, die daher separabel ist.
