--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -1162,22 +1162,30 @@ r>0\colon K_{r}(x)\subset U$.
 \end{satz}
 
 \begin{folger}\label{fol:1.1.3/1}
-  $(X,d)$ kompakt $\Longrightarrow$ $X$ ist separabel, d.\,h. $\exists$
-  abzählbare dichte Teilmenge in $X$
+  Ein kompakter, metrischer Raum~$(X,d)$ ist separabel, d.\,h. es gibt eine
+  abzählbare und dichte Teilmenge in $X$.
 
   \begin{proof}
-    $\forall j\in \N$ ist $X = \bigcup_{x\in X} K_{\frac1j}(x)$
+    Für alle $k\in\N$ ist $(K_{\frac{1}{k}}(x))_{x\in X}$ eine offene
+    Überdeckung. Nach \autoref{satz:heineborel} kann man zu jeder dieser
+    Überdeckungen eine endliche Teilüberdeckung finden:
+    \begin{gather*}
+      \big(K_{\frac{1}{k}}(x_{j}^{k})\big)_{j=1,\dotsc,n_{k}}
+    \end{gather*}
 
-    Aus \autoref{satz:heineborel} $\Longrightarrow$ $\exists$ endliche Teilüberdeckung
-    \begin{gather}\label{eq:3}
-      \big(K_{\frac1j}(x_{k}^{j})\big)_{k=1,\ldots,n_{j}}\qquad\forall j\in\N
-    \end{gather}
+    Diese $x^{k}_{j}$ bilden eine abzählbare Teilmenge $M:=\{x^{k}_{j}\colon
+    k\in\N, j=1,\dotsc,n_{k}\}$ von $X$.
 
-    $\Longrightarrow$ $M := \{ x_{k}^{j}\colon j\in \N, k=1,\ldots,n_{j}\}$ $M$
-    ist abzählbar und dicht in $X$: $x\in X, \epsilon>0$ wähle
-    $j>\frac1{\epsilon}$ Aus \autoref{eq:3} folgt $\exists k$ mit $x\in
-    K_{\frac1j}(x_{k}^{j}) \Longrightarrow d(x,x_{k}^{j})<\epsilon$
-    $\Longrightarrow$ Folgerung
+    Für jedes $x\in X$ und jedes $\epsilon>0$ findet man ein
+    Überdeckungselement~$K_{\frac{1}{k}}(x_{j}^{k})$ mit
+    $k>\frac{1}{\epsilon}$ und $j\in\{1,\dotsc,n_{k}\}$, das $x$ enthält.
+    \begin{gather*}
+      x\in K_{\frac{1}{k}}(x^{k}_{j}) \gdw{}
+         d(x, x_{j}^{k}) <\frac{1}{k} <\epsilon
+    \end{gather*}
+    Jedes $x\in X$ lässt sich also beliebig gut durch ein Element aus $M$
+    approximieren. Nach \autoref{bem:alternative-dicht-def} liegt also $M$
+    dicht in~$X$.
   \end{proof}
 \end{folger}
 
