Überarbeitung des Beispiels für endl.‐dim. Vektorräume
git-svn-id: https://svn.lug-jena.de/uni-skripte@1313 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -1419,20 +1419,30 @@ r>0\colon K_{r}(x)\subset U$.
 \subsection{Endlich-dimensionale Vektorräume}
 
 \begin{bsp}
+  Einige Beispiele für endlich-dimensionale Vektorräume:
   \begin{itemize}
-   \item $\K^{n} (\K=\R, \K=\C)$
-   \item $\Polyn^{n} := \{ p(x)\colon p(x) \text{Polynom vom Grad} \leq
-    n\}$
+   \item $\K^{n}$ mit $\K=\R$ oder $\K=\C$
 
-    $\{1,x,\ldots,x^{n}\}$ Basis, $\dim \Polyn=n+1$
-   \item $\mathcal{T}^{n} := \{ t(x)\colon t(x)=\sum_{k=-n}^{n} c_{k} \ez^{ikx},
-    c_{k}\in \C\}$
+   \item der \highl{Raum der Polynome} vom Grad kleiner oder gleich $n$:
+    \begin{gather*}
+      \Polyn^{n} := \{ p(x)\colon p(x) \text{~ist Polynom vom Grad} \leq
+         n\}
+    \end{gather*}
+    Die Standardbasis ist $\{1,x,\ldots,x^{n}\}$ und die Dimension ist
+    $\dim \Polyn=n+1$.
 
-    $\{\ez^{ikx}\colon k=-n,\ldots,n\}$ Basis, $\dim\mathcal{T}^{n}=2n+1$
+   \item der \highl{Raum der trigonometrischen Funktionen}
+    \begin{gather*}
+      \mathcal{T}^{n} := \{ t(x)\colon
+         t(x)=\sum_{\mathclap{k=-n}}^{n} c_{k} \ez^{\ie kx}, c_{k}\in \C\}
+    \end{gather*}
+
+    Die Standardbasis ist $\{\ez^{\ie kx}\colon k=-n,\dotsc,n\}$ und der Raum
+    hat die Dimension $\dim\mathcal{T}^{n}=2n+1$.
   \end{itemize}
 
-  \underline{Lineare Algebra:} $(E,\K) \dim E=n \Longrightarrow E\cong
-  \K^{n}$ isomorph
+  Aus der linearen Algebra ist bekannt, dass ein Vektorraum~$E$ \gdw{die
+  Dimension~$\dim E=n$ hat} er isomorph zu $\K^{n}$ ist; $E\cong\K^{n}$.
 \end{bsp}
 
 \begin{defini}
