Überarbeitung des Satz' über normierte VR
git-svn-id: https://svn.lug-jena.de/uni-skripte@1319 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -1568,44 +1568,101 @@ r>0\colon K_{r}(x)\subset U$.
 \end{satz}
 
 \begin{satz}
-  $(E, \norm{\cdot})$ normierter Vektorraum.
-
-  Dann sind folgende Aussagen äquivalent:
+  Für einen normierten Vektorraum~$(E, \norm{\cdot})$ sind die folgenden
+  Aussagen äquivalent:
   \begin{enumerate}
    \item $E$ endlichdimensional
-   \item jede beschränkte Mende ist präkompakt
-   \item die abgeschlossene Einheitskugel $B=\{x\in E\colon \norm{x}\leq 1\}$ in
-    $E$ ist kompakt.
+   \item jede beschränkte Menge ist präkompakt
+   \item die abgeschlossene Einheitskugel $B=\{x\in E\colon \norm{x}\leq 1\}$
+    in $E$ ist kompakt
   \end{enumerate}
 
   \begin{proof}
-    \begin{description}
-     \item[$(1)\Rightarrow(2)$] (Satz 1) klar
-     \item[$(2)\Rightarrow(3)$] nach Def. der Kompaktheit
-     \item[$(3)\Rightarrow(1)$] Es existieren
-      $\{x_{1},\ldots,x_{m}\} \subset B$ mit $\bigcup_{i=1}^{m}
-      K_{\frac12}(x_{i})\supset B$ nach \autoref{satz:heineborel}
+    \begin{schritte}
+     \item Für die Schlussfolgerung (1)~$\impliziert$~(2) verwenden wir
+      \autoref{satz:endl-norm-VR}. Dieser besagt, dass $E$ vollständig und
+      separabel ist. Hokus pokus und schon ist jede beschränkte Menge
+      präkompakt.
+      \help{Wieso? Ich seh's einfach nicht.}
 
-      Setzen $F := \Span \{x_{1},\ldots,x_{n}\}$ $\Rightarrow$ $F\subset
-      E$ endlichdimensionaler abgeschlossener Teilraum. Wir setzen: $F=E$
+     \item Jede präkompakte und abgeschlossene Menge ist nach
+      \autoref{fol:praekompakt} kompakt. Also gilt (2)~$\impliziert$~(3).
 
-      Ann.: $\exists x\in E\wedge x\notin F$
+     \item Es verbleibt noch der Schluss (3)~$\impliziert$~(1). Da $B$ kompakt
+      ist, ist $B$ auch präkompakt und nach \autoref{satz:praekomp-eps-Netz}
+      existiert dann für $\epsilon=\frac{1}{2}$ ein endliches $\epsilon$"~Netz
+      $N_{\frac{1}{2}}=\{x_{1},\dotsc, x_{n}\}$ von~$B$.
 
-      Es gilt:
+      Wir setzen $F:=\Span N_{\frac{1}{2}}$. $F$ ist also ein
+      endlichdimensionaler, abgeschlossener Teilraum von $E$.
+      \help{Woran sieht man, dass $F$ abgeschlossen ist?}
+      Indem wir noch zeigen, dass es keinen Punkt~$x\in F\setminus E$ gibt,
+      zeigen wir, dass $F=E$, also auch $E$ endlichdimensional ist.
+
+      Da $F$ abgeschlossen ist, gibt es einen minimalen Abstand~$d>0$ von $x$
+      zur Menge~$F$
+      \begin{gather}\label{eq:5}
+        0 < d := d(x,F) := \inf_{y\in F}\norm{x-y}
+      \end{gather}
+      Wir wählen ein $y\in F$, sodass $d\leq\norm{x-y}\leq\frac{3}{2}d$. Den
+      Punkt $x-y$ projizieren wir auf den Punkt~$z$ in der Einheitskugel~$B$,
+      wo es ein $x_{i}\in N_{\frac{1}{2}}$ mit $z\in K_{\frac{1}{2}}(x_{i})$
+      gibt.
       \begin{gather*}
-        d := d(x,F) := \inf_{y\in F}\norm{x-y}>0\qquad\text{da $F$ abgeschlossen}\\
-        \text{wählen } y\in F\colon d\leq \norm{x-y}\leq\frac{3}{2}d
-           \taglabel{eq:6}\\
-        \text{Für } z := \frac{x-y}{\norm{x-y}}\in B \exists x_{i}\colon
-           \norm{z-x_{i}}<\frac12\\
-        \Longrightarrow x=y+\norm{x-y}z = \underbrace{y +
-           \norm{x-y}x_{i}}_{=\tilde{y}\in F} +\norm{x-y}(z-x_{i})\\
-        d \leq \norm{x-\tilde{y}}= \norm{x-y}
-           \underbrace{\norm{z-x_{i}}}_{<\frac12} \leq \frac12 \norm{x-y}\\
-        \Longrightarrow \norm{x-y}\geq 2d\qquad\text{Widerspruch zur
-           \autoref{eq:6}}
+        z := \frac{x-y}{\norm{x-y}}
       \end{gather*}
-    \end{description}
+      Aus der Definition von $z$ lässt sich dann die \autoref{eq:6.1} herleiten
+      und aus dieser \autoref{eq:6.2}
+      \begin{align}
+        \notag
+        x &= y + \norm{x-y} z\\
+        \label{eq:6.1}
+           &= \underbrace{y + \norm{x-y}x_{i}}_{=\tilde{y}\in F}
+           + \norm{x-y} (z-x_{i})\\
+        \label{eq:6.2}
+        d &\leq \norm{x-\tilde{y}} &\text{nach \autoref{eq:5}}\\
+        \notag
+        &=\norm{x-y} \norm{z-x_{i}} &\text{nach \autoref{eq:6.1}}\\
+        \notag
+        &< \frac{1}{2} \norm{x-y} &\text{da $z\in K_{\frac{1}{2}}(x_{i})$}
+      \end{align}
+      Also ist $\norm{x-y}>2d$, was ein Widerspruch zur Wahl von $y$
+      darstellt.
+
+      \help{Muss denn das gleich dazu führen, dass es dieses $x$ nicht geben
+        kann? Wie wäre denn die folgende Argumentation?}
+
+      Da $F$ abgeschlossen ist, gibt es einen minimalen Abstand~$d$ von $x$
+      zur Menge~$F$
+      \begin{gather}\label{eq:5}
+        d := d(x,F) := \inf_{y\in F}\norm{x-y}
+      \end{gather}
+      Wir wählen einen Punkt~$y\in F$, der minimalen Abstand zu $x$ hat;
+      $d=\norm{x-y}$. Den Punkt $x-y$ projizieren wir dann auf den Punkt~$z$
+      in der Einheitskugel~$B$, wo es ein $x_{i}\in N_{\frac{1}{2}}$ gibt,
+      sodass mit $z\in K_{\frac{1}{2}}(x_{i})$ liegt.
+      \begin{gather*}
+        z := \frac{x-y}{\norm{x-y}}
+      \end{gather*}
+
+      Aus der Definition von $z$ lässt sich dann die \autoref{eq:6.1}
+      herleiten und aus dieser \autoref{eq:6.2}, die zu dem Widerspruch führt,
+      dass der Abstand von $x$ und $y$ größer als $2d$ ist, obwohl der
+      Punkt~$y$ so gewählt wurde, dass er den minimalen Abstand~$d$ hat.
+      \begin{align}
+        \notag
+        x &= y + \norm{x-y} z\\
+        \label{eq:6.1}
+           &= \underbrace{y + \norm{x-y}x_{i}}_{=\tilde{y}\in F}
+           + \norm{x-y} (z-x_{i})\\
+        \label{eq:6.2}
+        d &\leq \norm{x-\tilde{y}} &\text{nach \autoref{eq:5}}\\
+        \notag
+        &=\norm{x-y} \norm{z-x_{i}} &\text{nach \autoref{eq:6.1}}\\
+        \notag
+        &< \frac{1}{2} \norm{x-y} &\text{da $z\in K_{\frac{1}{2}}(x_{i})$}
+      \end{align}
+    \end{schritte}
   \end{proof}
 \end{satz}
 
