Überarbeitung des Beispiels von l_1 präkompakt
Die Überarbeitung ist nicht vollständig. Ich bin dann irgendwann nicht
mehr durchgestiegen, in welchem Raum wir sind und wo sich die Folge
gerade befindet.


git-svn-id: https://svn.lug-jena.de/uni-skripte@1320 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -1349,73 +1349,84 @@ r>0\colon K_{r}(x)\subset U$.
 \end{folger}
 
 \begin{bsp}\label{bsp:1.1.3/2}
-  $A\subset l_{1}(\N)$ präkompakt $\Longleftrightarrow$ $A$ beschränkt
-  und
+  Eine Teilmenge~$A$ der Menge~$l_{1}(\N)$ der absolutkonvergenten Reihen ist
+  \gdw{präkompakt} $A$ beschränkt ist und das Supremum der Partialsummenreste
+  gegen null geht
   \begin{gather}\label{eq:4}
     \sup_{a\in A}\sum_{j=n}^{\infty}\abs{a_{j}}
        \xrightarrow{n\rightarrow\infty} 0
   \end{gather}
 
   \begin{proof}
-    \begin{description}
-     \item["`$\Rightarrow$"'] $A$ präkompakt $\Longrightarrow$ $A$
-      beschränkt
+    \todo{Der Text muss nochmal ausgebaut werden. Viele Schritte nicht leicht
+      verständlich.}
+    \begin{schritte}
+     \item Da $A$ präkompakt ist, gibt es nach
+      \autoref{satz:praekomp-eps-Netz} für jedes $\epsilon>0$ ein endliches
+      $\epsilon$"~Netz $N_{\epsilon} =\{b^{1},\ldots,b^{m}\}\subset l_{1}(\N)$
+      von $A$. Das heißt, $A$ ist beschränkt.
+      \help{Ist das wirklich so leicht zu sehen? Warum haben wir das nicht mal
+        als Lemma gebracht?}
 
-      $\epsilon>0$ $\Longrightarrow$ $\exists$ endliches
-      $\epsilon$-Netz $\{b^{1},\ldots,b^{m}\}\subset l_{1}(\N)$
-
-      Es ist
+      Da die $b^{k}\in l_{1}(\N)$ absolutkonvergente Reihen sind, gilt
+      unabhängig von $k$ für hinreichend große $n\geq n(\epsilon)$
       \begin{gather*}
-        \sum_{j=n}^{\infty}\abs{b_{j}^{k}}\leq \epsilon\qquad \text{für}
-           n\geq n(\epsilon) \text{ unabhängig von } k\\
-        a\in A, n\geq n(\epsilon) \Longrightarrow
-           \sum_{j=n}^{\infty}\abs{a_{j}} \leq
-           \sum_{j=n}^{\infty}\abs{a_{j}-b_{j}^{k}} +
-           \sum_{j=n}^{\infty}\abs{b_{j}^{k}} \leq
-           \underbrace{\norm{a-b^{k}}_{1}}_{<\epsilon \text{falls $k$
-           passend}} + \epsilon < 2\epsilon
+        \sum_{j=n}^{\infty}\abs{b_{j}^{k}}\leq \epsilon
       \end{gather*}
-     \item["`$\Leftarrow$"'] Es sei $(a^{k})_{k}\subset A,
-      a^{k}=(a^{k}_{1},a^{k}_{2},\ldots)$
+      Für jede Reihe~$a\in A$ lässt sich deshalb der Partialsummenrest auf
+      folgenden Weise abschätzen, wobei man nach gebraucht, dass
+      $\norm{a-b^{k}}_{1} <\epsilon$ für ein passendes $b^{k}\in N_{\epsilon}$
+      \begin{gather*}
+        \sum_{j=n}^{\infty}\abs{a_{j}}
+           \leq \sum_{j=n}^{\infty}\abs{a_{j}-b_{j}^{k}}
+           + \sum_{j=n}^{\infty}\abs{b_{j}^{k}}
+           \leq \norm{a-b^{k}}_{1} + \epsilon
+           < 2\epsilon
+      \end{gather*}
 
-      $(a^{k})_{k}$ beschränkt in $l_{1}(\N)$ $\Longrightarrow$
-      $(a_{j}^{k})_{k}$ ist beschränkt in $\K$ für jedes $j\in\N$.
-      \begin{enumerate}
-       \item Wählen Teilfolge $(a^{1,k})_{k}\subset (a^{k})_{k}\colon
-        a^{1,k}_{1}\xrightarrow{k\rightarrow\infty} a_{1}$
-       \item Wählen Teilfolge $(a^{2,k})_{k}\subset (a^{1,k})_{k}\colon
-        a^{2,k}_{2}\xrightarrow{k\rightarrow\infty} a_{2}$
+     \item Es sei $(a^{k})_{k}$ eine Folge in der Teilmenge~$A$ von
+      $l_{1}(\N)$, wobei die Elemente der Folge
+      $a^{k}=(a^{k}_{1},a^{k}_{2},\dotsc)\subset\K$ absolutkonvergente Folgen
+      sind. Da $(a^{k})_{k}$ nach Voraussetzung beschränkt in $l_{1}(\N)$ ist,
+      ist für jedes feste $j\in\N$ die Querfolge~$(a^{k}_{j})_{k}$ der
+      $j$.~Glieder beschränkt in~$\K$. Wir wählen jetzt sukzessiv Teilfolgen
+      $(a^{l,k})_{k}$ der Gestalt
+      \begin{gather*}
+        \forall l\in\N\colon (a^{l,k})_{k} \subset (a^{l-1,k})_{k}\colon
+           a^{l,k}_{l} \xrightarrow{k\rightarrow\infty} a_{l}\in\K
+      \end{gather*}
+      Jede Folge~$(a^{l,k})_{k}$ ist so gewählt, dass die Querfolge über die
+      $l$.~Glieder der Elemente gegen den Grenzwert~$a_{l}$ konvergiert. Da
+      alle Folgen als Teilfolgen der vorhergehenden Folgen gewählt sind,
+      pflanzt sich diese Eigenschaft fort. Für alle Folgen mit $l\geq l_{0}$
+      konvergieren für alle $j\leq l_{0}$ die Querfolgen der $j$.~Glieder.
 
-        \ldots
-       \item wählen Teilfolge $(a^{l,k})_{k}\subset (a^{l-1,k})_{k}\colon
-        a^{l,k}_{l} \xrightarrow{k\rightarrow\infty} a_{l}$
+      Wir betrachten nun die Diagonalfolge $(b^{k})_{k} = (a^{k,k})_{k}
+      \subset A$. Für ein festes~$l$ ist
+      \begin{gather*}
+        (b^{k}_{l})_{k=l}^{\infty} = (a^{k,k}_{l})_{k=l}^{\infty}
+           \subset (a^{l,k}_{l})_{k=l}^{\infty}
+      \end{gather*}
+      Da für alle $l\in\N$ die Folge~$(a^{l,k})_{k}$ so gewählt ist, dass
+      $a_{l}^{l,k}$ gegen $a_{l}$ konvergiert, konvergiert auch $(b_{l}^{k})_{k}$
+      für $k\rightarrow\infty$ gegen $a_{l}$. Dann ist diese Folge konvergent
+      für $k\rightarrow\infty$:
+      \begin{gather*}
+        \sum_{l=1}^{n}\abs{b_{l}^{k}-a_{l}}
+      \end{gather*}
 
-        \ldots
-      \end{enumerate}
-
-      Betrachten Diagonalfolge $(b^{k})_{k} = (a^{k,k})_{k}\subset A$:
-
-      \begin{align*}
-        l \text{ fest} \Longrightarrow &(b^{k})_{k=l}^{\infty} =
-           (a^{k,k})_{k=l}^{\infty}\\
-         & (b^{k}_{l})_{k=l}^{\infty} =
-           (a^{k,k}_{l})_{k=l}^{\infty}\subset
-           (a^{l,k}_{l})_{k=l}^{\infty} \Rightarrow b_{l}^{k}
-           \xrightarrow{k\rightarrow\infty} a_{l}\\
-        \Longrightarrow& (b_{l}^{k})_{k} \text{ ist konvergent }\qquad\forall l\in\N\\
-        \Longrightarrow&
-           \sum_{l=1}^{n}\abs{b_{l}^{k}-a_{l}}\qquad\text{konvergent für}
-           k\rightarrow\infty\\
-        \intertext{wählen $n$ so dass \autoref{eq:4} gilt}\\
-        \Longrightarrow& \sum_{l=1}^{\infty}\abs{b_{l}^{k}-b_{l}^{j}} =
+      Wir wählen $n$, so dass die \autoref{eq:4} erfüllt ist.
+      \help{Woher wissen wir, dass das geht?}
+      \begin{gather*}
+        \sum_{l=1}^{\infty}\abs{b_{l}^{k}-b_{l}^{j}} =
            \underbrace{\sum_{l=1}^{n}\abs{b_{l}^{k}-
-             b_{l}^{j}}}_{<\epsilon \text{für} j,k>j_{0}(\epsilon)} +
-            \underbrace{\sum_{l=n+1}^{\infty}\abs{b_{l}^{k}-
-              b_{l}^{j}}}_{<2\epsilon}\\
-        \Longrightarrow&  (b^{k})_{k} \text{Cauchyfolge in $l_{1}(\N)$}\\
-        \Longrightarrow& \text{Konvergenz}
-      \end{align*}
-    \end{description}
+           b_{l}^{j}}}_{<\epsilon \text{~für~} j,k>j_{0}(\epsilon)} +
+           \underbrace{\sum_{l=n+1}^{\infty}\abs{b_{l}^{k}-
+           b_{l}^{j}}}_{<2\epsilon}
+      \end{gather*}
+      Also ist $(b^{k})_{k}$ eine Cauchyfolge in $l_{1}(\N)$ und da $l_{1}$
+      laut \autoref{bsp:1.1.1/4} vollständig ist, konvergiert $(b^{k})_{k}$.
+    \end{schritte}
   \end{proof}
 \end{bsp}
 
